--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,17 +5,32 @@
   "priceQuote": {
     "forms": ["Animal", "Protogen"],
     "animal": {
+      "suitTable": "Suit price base",
       "suitTitile": "Which type of suit would you like to commission?",
-      "animalTitle": "Which species would you like to commission?",
-      "animalVals": [ "Fox", "Wolf", "Cat", "Other"],
-      "furTitle": "How many colors of fur does your sona use?",
-      "fleeceTitle": "How many colors of fleece does your sona use?",
-      "notesTitle": "Notes",
-      "notesDesctiption": "e.g. link to pictures with draft"
-    },
-    "protogen": {
+      "suitVals": ["Mini parcial", "Partial", "Fullbody"],
 
+      "animalTitle": "Which species would you like to commission?",
+      "animalVals": ["Fox", "Wolf", "Cat", "Other"],
+
+      "furTable": "Fur colors",
+      "furTitle": "How many colors of fur does your sona use?",
+
+      "fleeceTable": "Fleece colors",
+      "fleeceTitle": "How many colors of fleece does your sona use?",
+
+      "notesTitle": "Notes",
+      "notesDesctiption": "e.g. link to pictures with draft",
+
+      "emailLabel": "johnsmith@gmail.com"
     },
-    "priceQuote": "Price quote: "
+    "protogen": {},
+    "priceQuote": {
+      "title": "Price quote: ",
+      "currencyCzk": "CZK",
+      "total": "Total"
+    },
+    "sendQuote": {
+      "sendBtn": "Send quote"
+    }
   }
 }
