--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,13 +24,33 @@
       "emailLabel": "johnsmith@gmail.com"
     },
     "protogen": {
+      "defaultEquipment": "The default quipment includes <b>fan</b> for airflow support, <b>RGB diode</b> for status about current emotion and <b>button</b> to switch between different emotions",
+      "protogenTable": "Base cost of protogen",
+
+      "fleeceTable": "Fleece colors",
+
+      "furTable": "Fur colors",
       "furTitle": "How many colors of fur should your sona have?",
 
       "matrixColorTitle": "What color should your led matrix have?",
       "matrixColorVals": ["Red", "Green", "Blue"],
-      
-      "numOfEarsTitle": "How many pairs of ears should your protogen have?",
-      "numOfEarsVals": ["One", "Two"]
+
+      "earsTable": "Number of pairs of ears",
+      "earsTitle": "How many pairs of ears should your protogen have?",
+      "earsVals": ["One", "Two"],
+
+      "hornsTable": "Horns",
+      "hornsTitle": "Horns",
+
+      "rgbRingsTable": "RGB rings",
+      "rgbRingsTitle": "RGB rings",
+
+      "wifiTable": "Wifi",
+      "wifiTitle": "Wifi",
+      "wifiSubtitle": "ability to control emotions with your phone",
+
+      "customEmotionTable": "Custom emotion",
+      "customEmotionTitle": "Custom emotion"
     },
     "priceQuote": {
       "title": "Price quote: ",
@@ -38,6 +58,10 @@
       "total": "Total"
     },
     "sendBtn": "Send quote"
+  },
+  "general": {
+    "yes": "Yes",
+    "no": "No"
   },
   "validations": {
     "required": "field is required",
