--- a/src/locales/cz.json
+++ b/src/locales/cz.json
@@ -19,9 +19,6 @@
       }
     }
   },
-  "aboutUs": {
-    "working": "Pracujeme na tom..."
-  },
   "priceQuote": {
     "notOpenForBusiness": "Momentálně nepřijímáme žádné poptávky",
     "forms": ["Zvíře", "Protogen"],
@@ -82,6 +79,10 @@
       "total": "Celkem"
     },
     "sendBtn": "Odeslat poptávku"
+  },
+  "aboutUs": {
+    "header": "Kdo jsme?",
+    "text": "Jsme tým z Evropy, přesněji z České republiky. Já, Bambi, výrábím fursuity a dělám na zakázkách, poté tu je taky MadChipmunk03, který nakódoval celou stránku od základu. Používám kožešiny hlavně z mohairbearmakingsupplies anebo na vyžádání jde objednat i z Howl Fabrics. Výroba zakázek trvá celkem dlouho, ale dočkáte se. Všechny zakázky jsou vyrobené mnou (Bambim) a také s láskou. Během výroby na vaší zakázce budu s váma v kontaktu a budu posílat postup anebo jednotlivý probírat detaily, aby to bylo dle vašich představ."
   },
   "general": {
     "yes": "Ano",
