comissions desc + footer + theme, lang switch

--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -4,6 +4,7 @@
   },
   "appBar": {
     "tabs": ["Domů", "Merch", "Kalkulačka", "Zakázky", "O nás"],
+    "nav": "Navigace",
     "themeTitle": "Motiv",
     "themes": ["Auto", "Světlý", "Tmavý"],
     "langTitle": "Jazyk",
