--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -91,6 +91,9 @@
     "header": "Kdo jsme?",
     "text": "Jsme tým z Evropy, přesněji z České republiky. Já, Bambi, výrábím fursuity a dělám na zakázkách, poté tu je taky MadChipmunk03, který nakódoval celou stránku od základu. Používám kožešiny hlavně z mohairbearmakingsupplies anebo na vyžádání jde objednat i z Howl Fabrics. Výroba zakázek trvá celkem dlouho, ale dočkáte se. Všechny zakázky jsou vyrobené mnou (Bambim) a také s láskou. Během výroby na vaší zakázce budu s váma v kontaktu a budu posílat postup anebo jednotlivý probírat detaily, aby to bylo dle vašich představ."
   },
+  "footer": {
+    "webMadeBy": "Stránku vytvořil"
+  },
   "general": {
     "yes": "Ano",
     "no": "ne"
