tos pricing UPDATE

--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -96,7 +96,7 @@
     "greetingsTitle": "Hewwu",
     "greetingsText": "Děkuji za váš zájem o commissionutí mě. Před odesláním formuláře pro zadání zakázky se ujistěte, že jste si přečetli TOS.",
     "pricingTitle": "Ceny",
-    "pricingText": "Cena Mini partialu začíná na 800 USD, partial na 1000 USD a samotná hlava na 500 USD. Cena paws je 150 USD a ocásku 200 USD; skutečná cena závisí na designu a doplňcích.",
+    "pricingText": "Cena Mini partialu začíná na 800 USD, partial na 1000 USD a samotná hlava na 500 USD. Cena paws je 150 USD a ocásku 200 USD. Protogen (Hlava, paws a tail) bude začínat na $1150 USD; skutečná cena závisí na designu a doplňcích.",
     "title": "Obchodní podmínky",
     "generalTitle": "Obecně",
     "generalBullets": [
