--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -98,7 +98,7 @@
     "greetingsTitle": "Hewwu there",
     "greetingsText": "Thank you for your interest in commissioning me. Before submitting a commission form, make sure you have read the TOS.",
     "pricingTitle": "Pricing",
-    "pricingText": "Mini partials start at $800 USD, partials at $1000 USD, and heads just at $500 USD. The price of the paws is $150 USD and the tail is $200 USD; the actual cost depends on the design and extras.",
+    "pricingText": "Mini partials start at $800 USD, partials at $1000 USD, and heads just at $500 USD. The price of the paws is $150 USD and the tail is $200 USD. Protogen (head, paws and tail) will start from $1150 USD;  the actual cost depends on the design and extras.",
     "title": "Terms of service",
     "generalTitle": "General",
     "generalBullets": [
